fix line spacing

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ footer {
 
 @media all and (max-width: 992px) {
   #predict { display: none; }
-  #daniel { line-height: 2vw;}
+  #daniel { line-height: 3vw; font-size:2.5vw;}
   #imagefilm {width: 100%; padding: none; display: block;}
   #imagecreds {display: none;}
   #creds {display: none;}
@@ -278,7 +278,7 @@ footer {
 
 @media all and (min-device-width: 0px) and (max-device-width: 480px) {
   #predict { display: none; }
-  #daniel { line-height: 2vw;}
+  #daniel { line-height: 3vw; font-size: 2.5vw;}
   #imagefilm {width: 100%; padding: none; display: block;}
   #imagecreds {display: none;}
   #creds {display: none;}
